--- a/reservame-Frontend/src/components/Negocio.css
+++ b/reservame-Frontend/src/components/Negocio.css
@@ -1,4 +1,4 @@
-.modal {
+/* .modal {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -8,7 +8,7 @@
     border: 2px solid #000;
     box-shadow: 24px 24px 24px rgba(0, 0, 0, 0.2);
     padding: 16px;
-}
+} */
 
 .reserva {
     max-width: 800px;
