--- a/reservame-Frontend/src/components/HeaderUser.css
+++ b/reservame-Frontend/src/components/HeaderUser.css
@@ -1,10 +1,10 @@
-.encabezado {
+/* .encabezado {
     margin-bottom: 20px;
     display: flex;
     align-items: center;
     position: sticky;
     top: 0;
-    /* width: 100%; */
+    /* width: 100%; 
     background-color: #e8e6e3;
     padding: 10px 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -12,7 +12,7 @@
 }
 .app-title {
     /* font-size: 1.5em; */
-    /* font-weight: bold; */
+    /* font-weight: bold; 
     color: #333;
     text-align: center;
     margin-left: 20px;
@@ -23,7 +23,6 @@
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
-   
     font-size: 16px;
     margin: 4px 2px;
     gap: 10px;
@@ -49,4 +48,4 @@
 
 .encabezado button:hover {
     background-color: grey;
-}
+} */
