--- a/reservame-Frontend/src/pages/RegisterPages/RegisterPage.css
+++ b/reservame-Frontend/src/pages/RegisterPages/RegisterPage.css
@@ -1,4 +1,4 @@
-.register-page {
+/* .register-page {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +25,7 @@
     font-size: 1.8rem;
 }
 
-/* Estilos generales para inputs */
+/* Estilos generales para inputs 
 .input-group {
     display: flex;
     flex-direction: column;
@@ -54,7 +54,7 @@
     outline: none;
 }
 
-/* Fila para nombre y apellido */
+/* Fila para nombre y apellido 
 .row {
     display: flex;
     gap: 50px;
@@ -65,7 +65,7 @@
     flex: 1;
 }
 
-/* Fila para email y contraseña */
+/* Fila para email y contraseña 
 .column {
     display: flex;
     flex-direction: column;
@@ -73,7 +73,7 @@
     gap: 15px;
 }
 
-/* Estilos para el botón */
+/* Estilos para el botón 
 .register-form button {
     width: 100%;
     padding: 12px;
@@ -107,4 +107,4 @@
 
 .register-form a:hover {
     color: #6A9C89;
-}
+} */
